# src/database/Routes/CarsRoutes.routes.ts
@@ -1,16 +1,37 @@
 import { Router } from "express";
 import { carController } from "../../controllers/carController";
+import attachCurrentUser from "../../middlewares/attachCurrentUser";
+import { isAdmin } from "../../middlewares/idAdmin";
+import isAuth from "../../middlewares/isAuth";
 
 const CarsRouter = Router();
 
 CarsRouter.get("/cars", carController.index);
 
-CarsRouter.get("/car/:id", carController.findById);
+CarsRouter.get("/car/:id", isAuth, attachCurrentUser, carController.findById);
 
-CarsRouter.post("/create_car", carController.create);
+CarsRouter.post(
+  "/create_car",
+  isAuth,
+  attachCurrentUser,
+  isAdmin,
+  carController.create
+);
 
-CarsRouter.put("/edit_car/:id", carController.update);
+CarsRouter.put(
+  "/edit_car/:id",
+  isAuth,
+  attachCurrentUser,
+  isAdmin,
+  carController.update
+);
 
-CarsRouter.delete("/delete_car/:id", carController.delete);
+CarsRouter.delete(
+  "/delete_car/:id",
+  isAuth,
+  attachCurrentUser,
+  isAdmin,
+  carController.delete
+);
 
 export { CarsRouter };
