# src/database/Routes/RecSenha.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { recuperacaoDeSenhaController } from "../../controllers/recuperação-de-senha";
+
+const recSenhaRouter = Router();
+
+recSenhaRouter.post("/recuperar_senha", recuperacaoDeSenhaController.recSenha);
+
+export { recSenhaRouter };
