# src/server.ts
@@ -1,8 +1,10 @@
-import express, { Request, Response } from "express";
+import express from "express";
 import mongoose from "mongoose";
 
 import { CarsRouter } from "./database/Routes/CarsRoutes.routes";
-import { SwaggerRouter } from "./database/Routes/swagger.rputes";
+import { userRouter } from "./database/Routes/user.routes";
+import { SwaggerRouter } from "./database/Routes/swagger.routes";
+import { recSenhaRouter } from "./database/Routes/RecSenha.routes";
 
 const app = express();
 app.use(express.json());
@@ -16,7 +18,9 @@ mongoose
     console.log(`error in DB connect`, err);
   });
 
-app.use("/", CarsRouter);
+app.use("/cars", CarsRouter);
+app.use("/user", userRouter);
+app.use("/", recSenhaRouter);
 app.use("/doc", SwaggerRouter);
 
 app.listen(3333, () => {
